fix overlapping on smaller screen

--- a/style.css
+++ b/style.css
@@ -133,7 +133,8 @@ html {
 
 /* Landing Page*/
 #landing-page{
-    /* display: flex; */
+    display: flex;
+    flex-direction: column;
     font-size: 30px;
 }
 
@@ -173,7 +174,7 @@ html {
     color: transparent;
 }
 
-@media screen and (max-width: 1050px){
+/* @media screen and (max-width: 1050px){
     #landing-page{
         font-size: 16px;
     }
@@ -189,7 +190,7 @@ html {
     .landing-info h1{
         margin-bottom: 2rem;
     }
-}
+} */
 
 /* about page */
 .about-info h1{
